improve BoundedNatural.multiply from 50x BigInteger to 2x